integration and unit test addition to ensure concepts stuck for my learning

--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -6,7 +6,7 @@
     border-top: 1px solid white;
 }
 
-.footer h4 {
+.footer h3 {
     color: rgb(255, 145, 0);
     font-size: 2rem;
     text-align: center;
